# folderangel

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
docs/: LARGE_CORPUS.md  MODULES.md  SELF_REVIEW.md  SPEC.md
scripts/: build_linux.sh  build_macos.sh  build_windows.ps1  folder1004.iss  folder1004.spec  folderangel.iss
src/folder1004/: __init__.py  __main__.py  config.py  embed.py  organizer.py  parser_cache.py  pipeline.py  planner.py  reporter.py  rolling.py  runlog.py  scanner.py  shortcuts.py  similarity.py
src/folder1004/llm/: prompts.py
src/folder1004/parsers/: office.py  registry.py
src/folder1004/ui/: main.py  styles.py  views.py  widgets.py
src/folderangel/: __main__.py  cluster.py  config.py  dedup.py  embed.py  index.py  metadata.py  models.py  morph.py  organizer.py  parser_cache.py  pipeline.py  planner.py  reporter.py  rolling.py  runlog.py  shortcuts.py  similarity.py  worker.py
src/folderangel/llm/: __init__.py  client.py  mock.py  prompts.py
src/folderangel/parsers/: __init__.py  office.py  pdf.py  registry.py
src/folderangel/ui/: main.py  styles.py  views.py
tests/: conftest.py  test_archive_parser.py  test_cross_platform.py  test_dedup_and_modes.py  test_index.py  test_large_corpus.py  test_metadata.py  test_microbatch_decision.py  test_mock_planner.py  test_morph.py  test_organizer.py  test_parser_cache.py  test_parsers.py  test_parsers_resilience.py  test_pipeline_mock.py  test_reporter.py  test_runlog_redaction.py  test_sanitize_and_recovery.py  test_scanner.py  test_shortcuts_linux.py  test_ui_smoke.py
